<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nkechi_nnaji.androidui.MainActivity"
    android:orientation="vertical"
    android:id="@+id/ll_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/twenty"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <TextView
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:padding="@dimen/sixteen" />
        <TextView
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:padding="@dimen/sixteen" />

        <TextView
            android:id="@+id/profession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profession"
            android:padding="@dimen/sixteen"
            />
        <TextView
            android:id="@+id/years_of_experience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/years_of_experience"
            android:padding="@dimen/sixteen"
            />
        <TextView
            android:id="@+id/area_of_expertise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/areas_0f_expertise"
            android:padding="@dimen/sixteen"
            />
    </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/first_name_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/sixteen"
                android:hint="@string/first_name_entry_hint"
                android:maxLines="1"
                android:textColorHint="#1A000000"/>

            <EditText
                android:id="@+id/last_name_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/sixteen"
                android:hint="@string/last_name_entry_hint"
                android:maxLines="1"
                android:textColorHint="#1A000000"/>

            <EditText
                android:id="@+id/profession_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/sixteen"
                android:hint="@string/profession_entry_hint"
                android:maxLines="1"
                android:textColorHint="#1A000000"/>
            <EditText
                android:id="@+id/experience_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/sixteen"
                android:hint="@string/experience_entry_hint"
                android:maxLines="10"
                android:textColorHint="#1A000000"/>
            <EditText
                android:id="@+id/name_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/sixteen"
                android:hint="@string/software_skills__entry_hint"
                android:maxLines="10"
                android:textColorHint="#1A000000"/>
        </LinearLayout>

    </LinearLayout>
    <ScrollView
        android:id="@+id/associated_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/description_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/sixteen"
            android:paddingEnd="@dimen/sixteen" />
    </ScrollView>


</LinearLayout>
